--- a/RoadWearAdjuster/RoadWearAdjuster.csproj
+++ b/RoadWearAdjuster/RoadWearAdjuster.csproj
@@ -43,6 +43,9 @@
 		<Reference Include="Colossal.Localization">
 			<Private>false</Private>
 		</Reference>
+		<Reference Include="Colossal.AssetPipeline">
+			<Private>false</Private>
+		</Reference>
 		<Reference Include="Unity.InputSystem">
 			<Private>false</Private>
 		</Reference>
@@ -61,10 +64,6 @@
 		<Reference Include="Unity.Mathematics">
 			<Private>false</Private>
 		</Reference>
-		<Reference Include="UnityEngine.ImageConversionModule">
-			<HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\UnityEngine.ImageConversionModule.dll</HintPath>
-			<Private>False</Private>
-		</Reference>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -80,8 +79,31 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="C:\Users\han\AppData\LocalLow\Colossal Order\Cities Skylines II\.cache\Modding\Mod.props" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="C:\Users\han\AppData\LocalLow\Colossal Order\Cities Skylines II\.cache\Modding\Mod.props" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="C:\Users\han\AppData\LocalLow\Colossal Order\Cities Skylines II\.cache\Modding\Mod.props" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="C:\Users\han\AppData\LocalLow\Colossal Order\Cities Skylines II\.cache\Modding\Mod.props" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<None Include="$(ModPropsFile)" Link="Properties\Mod.props" />
 		<None Include="$(ModTargetsFile)" Link="Properties\Mod.targets" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies.net472" Version="1.0.3">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
 	</ItemGroup>
 
 </Project>
